# Medical-assistant

./: Dockerfile  README.md  example.env  pyproject.toml  render.yaml  requirements.txt
api/: main.py
api/core/: config.py  security.py
api/routers/: chat_comletion.py  generate.py  health.py  home.py
api/schemas/: models.py
api/services/: hf_client.py
api/utility/: helpers.py
src/: app.py
